make it compatible with java 8